[gd_scene load_steps=2 format=3 uid="uid://5ygohw6bucf0"]

[ext_resource type="Script" uid="uid://brr4c7v5iay8o" path="res://Objects/OldItem/old_item.gd" id="1_rk2tk"]

[node name="OldItem" type="RigidBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_rk2tk")

[node name="ItemSprite" type="Sprite2D" parent="."]

[node name="ItemCollision" type="CollisionShape2D" parent="."]
